# serializer version: 1
# name: test_feature_spec_version_deterministic
  '8f172f2cbfbdb47d3436805744df4fdc5c9d01d807fad215e1e20c4d1979f638'
# ---
# name: test_feature_spec_version_includes_all_properties
  'd064fcf34eeae2421b1f5ea49a3c6129de81b2dfe6134f55f62193feb761d877'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'feature_spec_version': 'c2789d844c9d45db84de5e807dcda8e6a1e82db996315120c13649018e0c28bf',
    'feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'tests.test_spec_version.SnapshotFeature',
    'feature_spec': dict({
      'deps': None,
      'fields': list([
        dict({
          'code_version': '1',
          'deps': '__METAXY_ALL_DEP__',
          'key': list([
            'data',
          ]),
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': list([
        'snapshot',
        'test',
      ]),
      'metadata': dict({
      }),
    }),
    'feature_spec_version': '4e4360e5ed4599f1a073f442fed25260423dbad28ea351e3e58d7e27fa8676df',
    'feature_tracking_version': 'f9122c9cb65202ea7d3b1e07b937e4b7461c6e97f8fa348df4cf778465a29174',
    'feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
    'project': 'test',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  '69f1e1fd95746476d014639e56fdbe7518c03b8f0113996138f9a86e1352bfea'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  '1bbfdb3e9bd1acaca7f56d798ca7dcdb42dbf647ac5403139dc57f5216db4584'
# ---
